# bot_discord

./: .dockerignore  .gitignore  LICENSE.txt  README.md  bot.py  config.py  docker-compose.yaml  dockerfile  main.py  pyproject.toml  requirements.txt
aiosoundcloud/: __init__.py  schemas.py  soundcloud_client.py  soundcloud_client_dto.py  utils.py
cogs/: player.py
cogs/core/: __init__.py  audio_player.py  audio_player_session.py  exception.py  interface.py  schemas.py  session.py  song_api.py  sound_cloud_api.py  view.py
database/: __init__.py  user_db.py
