[project]
name = "bot-discord"
version = "0.1.0"
description = "music discord bot"
authors = [
    {name = "sioxty",email = "maksymslushayev@gmail.com"}
]
license = {text = "MIT License (Modified – SioxtyBot License v1.0 Addendum)"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "disnake (>=2.10.1,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "cachetools (>=6.1.0,<7.0.0)",
    "pynacl (>=1.5.0,<2.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "brotli (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
